Remove multi-platform process creation
Trying it out locally, multi-platform process creation with ProcessBuilder is an absolute pain, you don't want to even bother

It seems like we really have to rewrite ctr-dsiwaretool in Java, oh well.

This commit removes all multi-platform attempts and will simply throw a short and sweet exception if you are not running Windows 64 bit

Oh, and I added some code to determine if decryption went smooth or not, seems like some people use the wrong movable.sed for their DSiWare..........